@@ -1,0 +1,5 @@
+<?php
+function testRuleNotAppliesToFunctionWithoutEvalExpression()
+{
+    echo __FUNCTION__;
+}
